--- a/src/css/app.css
+++ b/src/css/app.css
@@ -659,9 +659,8 @@ body:is(.dark *) {
 }
 
 .hotelImage {
-  border:1px solid black;
-  width: 100%; /* ← Increased from 300px */
-  height: 100%;
+  width: 350px; /* ← Increased from 300px */
+  height: 229px;
   object-fit: cover;
 }
 
